# flowy

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  test.toml  times.toml
.github/workflows/: auto-release.yml  main.yml
assets/: flowy.service
flowy/: Cargo.toml  README.md
flowy/src/: README.md  cli.yml  lib.rs  main.rs  presets.rs  solar.rs
scripts/: postinst
src/: cli.yml  lib.rs  main.rs  os.rs  presets.rs  wallpapers.rs
src/wallpapers/: linux.rs  macos.rs
wallpaper_rs/: Cargo.toml
wallpaper_rs/examples/: get_wallpaper.rs
wallpaper_rs/src/: lib.rs  linux.rs  windows.rs
wallpaperrs/: Cargo.toml
wallpaperrs/src/: lib.rs
wallpapers/: Cargo.toml
wallpapers/src/: linux.rs
