[package]
name = "paper_switch"
version = "0.1.0"
authors = ["vineetred <vineetreddy@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enquote = "1.0.3"
toml = "0.5"
clokwerk = "0.3.0"
serde = { version = "1.0.114", features = ["derive"] }