[package]
name = "wallpaper_rs"
version = "0.1.1"
authors = ["vineetred <vineetreddy@live.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Provides an interface for setting and getting desktop wallpaper."
homepage = "https://github.com/vineetred/flowy"
repository = "https://github.com/vineetred/flowy"
categories = ["api-bindings"]

keywords = ["desktop", "wallpaper", "background"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enquote = "1.0.3"
which = "4.3.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }

[target.'cfg(target_os = "linux")'.dependencies]
dirs-next = "2.0.0"

[[example]]
name = "get_wallpaper"
