[package]
name = "wallpapers"
version = "0.1.0"
authors = ["vineetred <vineetreddy@live.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Provides an interface for setting and getting desktop wallpaper."
homepage = "https://github.com/vineetred/flowy"
repository = "https://github.com/vineetred/flowy"
categories = ["api-bindings"]

keywords = ["desktop", "wallpaper", "background"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enquote = "1.0.3"



[package.metadata.deb]
maintainer = "Vineet Reddy <vineetreddy@live.com>"
license-file = ["LICENSE", "3"]
depends = "$auto, systemd"
extended-description = """\
A dynamic desktop wallpaper changer that is written in the memory-safe programming language, Rust."""
section = "admin"
priority = "optional"
assets = [
    ["assets/flowy.service", "etc/systemd/user/", "644"],
    ["target/release/flowy", "usr/bin/", "755"],
]
maintainer-scripts = "scripts/"
